@startuml
title Singleton Pattern - The Vault - Zustandsdiagramm
hide empty description

[*] --> AppStart
state AppStart : HTML geladen: _ghtml_singleton_challenge.html
AppStart --> Initialisierung : Script(s) laden
Initialisierung --> DatenLaden : fetch Konfiguration/Leveldaten
DatenLaden --> Bereit : Daten erfolgreich geladen
DatenLaden --> Fehler : Laden fehlgeschlagen
Bereit --> Spielzyklus : Erste Runde starten

state Spielzyklus {
  [*] --> WarteAufEingabe
  WarteAufEingabe --> Auswertung : Nutzerinteraktion
  Auswertung --> Feedback : Regeln pruefen + Score/HUD aktualisieren
  Feedback --> FortschrittPruefen : Weiter / Auto-Fortschritt
  FortschrittPruefen --> Levelwechsel : Naechstes Level laden
  Levelwechsel --> WarteAufEingabe : Level bereit
  FortschrittPruefen --> Abschluss : Letztes Level abgeschlossen
}

Abschluss --> Neustart : Neustart ausloesen
Neustart --> Initialisierung : State zuruecksetzen
Abschluss --> [*] : Sitzung verlassen
Fehler --> [*]

note right of Initialisierung
Quelle: databases/Teil02 FIAE/database/Architektur & Patterns/Patterns (konkreter als „Design Patterns“)/Singleton/_ghtml_singleton_challenge.html
JS: _gjs_singleton_challenge.js
fetch: data/_gg01_singleton_challenge.json
Merkmale: level-zyklus, neustart, score, fehlerbehandlung
end note
@enduml
